# blocktest

./: package-lock.json  package.json
blockchain-api/: Dockerfile  README.md  docker-compose.yml  healthcheck.js  package.json  server.ts  tsconfig.json  vitest.config.ts
blockchain-api/auth/: middleware.ts
blockchain-api/docs/: openapi.yaml  websocket-schema.md
blockchain-api/routes/: auth.ts  blockchain.ts  consensus.ts  transactions.ts  wallet.ts
blockchain-api/tests/: README.md  auth.test.ts  integration.test.ts  server.test.ts  setup.ts  websocket.test.ts
blockchain-api/ws/: handler.ts
blockchain-core/: Cargo.toml  README.md
blockchain-core/src/: config.rs  consensus.rs  crypto.rs  dag.rs  error.rs  lib.rs  main.rs  metrics.rs  types.rs  utils.rs
blockchain-core/tests/: consensus_tests.rs  crypto_tests.rs  dag_aware_consensus_tests.rs  dag_tests.rs  integration_tests.rs
src/app/: globals.css  page.tsx
src/app/api/metrics/: route.ts
src/app/blockchain-demo/: page.tsx
src/lib/blockchain/: IMPLEMENTATION_SUMMARY.md  README.md  consensus.ts  crypto.ts  dag.ts  index.ts  types.ts
