[package]
name = "kaldrix-blockchain-core"
version = "0.1.0"
edition = "2021"
authors = ["KALDRIX Team <developer@kaldrix.com>"]
description = "Quantum-resistant DAG-based blockchain core for KALDRIX network"
license = "MIT"
repository = "https://github.com/ancourn/kaldr1.git"
keywords = ["blockchain", "dag", "quantum", "cryptocurrency", "post-quantum"]
categories = ["cryptography", "blockchain"]

[lib]
name = "kaldrix_core"
path = "src/lib.rs"

[[bin]]
name = "kaldrix-node"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Cryptography (Post-Quantum)
pqcrypto = { version = "0.17", features = ["kyber", "dilithium"] }
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.9"
rand = "0.8"
sha3 = "0.10"
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Data structures
petgraph = "0.6"
indexmap = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Networking
libp2p = { version = "0.53", features = ["full"] }
multiaddr = "0.18"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
crossbeam = "0.8"
parking_lot = "0.12"

# Metrics and benchmarking
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Configuration
config = "0.13"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
mockall = "0.12"
proptest = "1.4"

[[bench]]
name = "dag_bench"
harness = false

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "consensus_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true